@@ -5,6 +5,8 @@
        NEW: Remember visibility status of main toolbar.
        NEW: Restore the geometry of the main window between sessions.
        NEW: Restore the state and placement of the dock windows.
+       NEW: Nuand BladeRF supprot.
+       NEW: RF Space Netsdr support.
      FIXED: Incorrect handling of decimal values in LNB LO frequency.
      FIXED: Correctly apply initial LNB LO frequency.
      FIXED: Audio output device selection on Mac OS X.
